corrected aligned elements

--- a/stylesIndex.css
+++ b/stylesIndex.css
@@ -2,10 +2,8 @@
     text-align: center;
 }
 
-.btn-group{
+#buttonContainer{
     text-align: center;
 }
 
 
-margin0 auto
-display block
